--- a/composer.json
+++ b/composer.json
@@ -7,18 +7,20 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "google/apiclient": "^2.0",
         "laravel/framework": "5.7.*",
         "laravel/socialite": "^3.1",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
-        "socialiteproviders/battlenet": "^2.0"
+        "socialiteproviders/battlenet": "dev-master",
+        "sunra/php-simple-html-dom-parser": "^1.5"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
+        "nunomaduro/collision": "^2.0.1",
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
